tests/NormalTests/paczka1/fuzzy1/39582989.err
Error in line 4: Nj8f33Elt S183 -2,2
Error in line 5: BI6ec A176 75,0
Error in line 1: Nj8f33Elt S183 89,7
Error in line 6: BI6ec S183 25,2
Error in line 11: Nj8f33Elt A176 57,4
Error in line 8: cvkV A730 65,0
Error in line 29: BI6ec A844 67,3
Error in line 37: A730 A176 -1,2
Error in line 26: cvkV S183 72,2
